--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "acorn": "^6.1.1",
+    "autoprefixer": "^9.5.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "chalk": "^2.4.2",
